# formationRust

./: README.md  main.rs
tp0/: Cargo.toml
tp0/src/: compteBancaire.rs  ecrire.rs  lire.rs  main.rs  main_old.rs  test.txt
tp1/src/: main.rs
tp2/: Cargo.toml
tp2/src/: main.rs
tp3/: Cargo.toml
tp3/src/: main.rs
tp4/: Cargo.toml
tp4/src/: main.rs
tp4_client/: Cargo.toml
tp4_client/src/: main.rs
tp7/: Cargo.toml
tp7/src/: client.rs  server.rs
tp8/: Cargo.toml
tp8/src/: chat_message.rs  client.rs  server.rs
tp9/: Cargo.toml
tp9/src/: client.rs  server.rs
