[package]
name = "chat_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }

[[bin]]
name = "chat_server"
path = "src/server.rs"

[[bin]]
name = "chat_client"
path = "src/client.rs"